# LSTimer

./: Cargo.toml  README.md  index.html  lstimer.desktop
.github/workflows/: rust.yml
screenshots/: dnf+2  settings  statistics  ui settings
src/: main.rs
