[package]
name = "LSTimer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1